Update to Agnix branding with Netlify deployment

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, target-densityDpi=device-dpi, minimal-ui"
     />
-    <title>Abhishek Giri</title>
+    <title>Agnix - Abhishek Giri</title>
     <script type="module" crossorigin src="/assets/index.b8dab8e6.js"></script>
     <link rel="stylesheet" href="/assets/index.034a5313.css">
   </head>
@@ -78,7 +78,7 @@
             </div>
 
             <div class="hero-second">
-              <p class="hero-second-subheading first-sub">CodeAG.io</p>
+              <p class="hero-second-subheading first-sub">Agnix</p>
               <p class="hero-second-subheading second-sub">Website</p>
             </div>
           </div>
@@ -210,12 +210,12 @@
             <h3 class="section-heading">
               <a
                 style="color: inherit"
-                href="https://codeag.io"
-                >Portfolio Website</a
+                href="https://agnix.netlify.app"
+                >Agnix Website</a
               >
             </h3>
             <p class="section-text">
-              Visit my complete portfolio to see detailed case studies, technical blogs, and my latest AI/ML research work.
+              Visit Agnix to explore my complete portfolio, detailed case studies, technical blogs, and latest AI/ML research work.
             </p>
           </div>
         </section>
